Rename the attribute value properly and more explanation comments were added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul class="dropdown__list js-dropdown-list js-sorting">
                         <li class="dropdown__list-item" data-id="all">No sorting</li>
                         <li class="dropdown__list-item" data-id="new">New movies</li>
-                        <li class="dropdown__list-item" data-id="desc">Highest rating</li>
+                        <li class="dropdown__list-item" data-id="top">Highest rating</li>
                     </ul>
                 </div>
 
